updated my projects

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </li><li>
                         <a class="page-scroll" href="#About">About</a>
                     </li><li>
-                        <a class="page-scroll" href="#Projects">Projects</a>
+                        <a class="page-scroll" href="#Projects">My Projects</a>
                     </li><li>
                         <a class="page-scroll" href="#Contact">Contact</a>
                     </li>
